implement func view survey published